--- a/{{ cookiecutter.app_name }}/Chart.yaml
+++ b/{{ cookiecutter.app_name }}/Chart.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 
 # Nome da Aplicação. Obs.: deve ser iqual a tag nameDeployment no values.yaml linha: 8
-name: nome-da-aplicacao  # ou # worker-nome-composto
+name: {{ cookiecutter.app_name }}  # ou # worker-nome-composto
 
 # Descrição
-description: chart nome-da-aplicacao
+description: {{ cookiecutter.app_name }}
 
 # type: application
 
@@ -16,5 +16,5 @@ appVersion: 1.0.0
 
 #Desenvolvedor Responsável
 maintainers:
-- name: squad
+- name: {{ cookiecutter.squad_name }}
   email: dev@pmenos.com.br
